--- a/style/estilo.css
+++ b/style/estilo.css
@@ -127,7 +127,12 @@ html,body{
 }
 
 /*Extra small devices (portrait phones, less than 576px)*/
-@media (max-width: 366px) { 
+@media (max-width: 366px) {
+
+	.card-title{
+		font-size: 16px;
+		font-weight: bolder;
+	} 
 
 	.partners-logo img{
 		margin-left: auto;
@@ -182,7 +187,12 @@ html,body{
 }
 
 /*Extra small devices (portrait phones, less than 576px)*/
-@media (max-width: 415px) { 
+@media (max-width: 415px) {
+	
+	.card-title{
+		font-size: 16px;
+		font-weight: bolder;
+	} 
 
 	.partners-logo img{
 		margin-left: auto;
